# mytutorial

cmake_tut/: readme.md
cmake_tut/basic/: CMakeLists.txt  main.cpp
cmake_tut/mul_src/: CMakeLists.txt  mysqrt.cpp
cmake_tut/use_lib/: CMakeLists.txt  main.cpp
cmake_tut/use_lib/Lib/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
